@@ -1,3 +1,8 @@
+TheMightyDude (01 January 2013)
+--------------------------------------
+Added a feature to erase old out of date Session Data.
+Oh and Happy New Year.
+
 TheMightyDude (24 December 2012)
 --------------------------------------
 Sanitized ZoneName so that we no longer have loads of \\ in the ZoneName.
